--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -195,7 +195,7 @@
  HNN_jiang_chuou:0 "蒋锄欧"
  HNN_jiang_chuou_commander_desc:0 "§Y陆军将领介绍\n生于：§!§g1891年；大清帝国、湖南省东安§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g蒋锄欧从广西陆军干部学堂毕业后参加了辛亥革命，之后加入了湘军。蒋锄欧参加了许多战役，包括护国运动、驱逐张敬尧、击退企图重返湖南的谭延闿以及唐生智叛乱等。在叶开鑫的领导下，蒋锄欧一直是赵恒惕麾下的一名能干的军官，尽管对于一名军人来说，叶开鑫可能有些过于热衷政治了。§!\n\n§Y重要信息：蒋锄欧是一位著名的军事现代化倡导者，他对装甲车和铁道炮的发展尤其感兴趣。他甚至还撰写了一篇名为《欧美军事交通考察记》的文章，详细介绍了西方国家的各种先进技术。§!"
  HNN_tang_shengzhi:0 "唐生智"
- HNN_tang_shengzhi_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1889年10月12日；大清帝国、湖南省东安§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g唐生智原属于赵恒惕湘系军阀，其在生涯早期与谭延闿有过交锋。当时唐生智协同贺耀祖、叶开鑫把谭延闿从衡山赶回了广州。在接下来几年里，唐生智与叶开鑫不和，双方摩擦日渐增加，而前者认为后者更受赵的青睐。1926年3月，唐生智发动兵变反对赵恒惕，但是兵败而被迫逃往广州。\n\n唐生智受到了广州方面的欢迎，其部被改组为国民革命军第八军。唐生智和他统帅的第八军很快得以在北伐战争中证明自己的能力。他率部大举进攻湖南，赶走了赵恒惕，还接连战胜吴佩孚部。可惜北伐随后遭到了德意志帝国的干涉，总司令蒋介石惨死，中央委员会流亡巴黎，背靠德国的吴佩孚赢下了战争。\n\n唐生智率领第八军逃窜到了江西和福建的山区，并与孙传芳的八省联合斗争了数年。上海起义后，邓演达和宋庆龄率领临时行动委员会附属部队南下加入了唐生智，并建立了闽赣根据地以继续反抗。尽管国民党的情况不容乐观，这位“佛教将军”却坚信总有一天，他会将故乡从赵恒惕的不公统治中解放出来。§!"
+ HNN_tang_shengzhi_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1889年10月12日；大清帝国、湖南省东安§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g唐生智原属于赵恒惕湘系军阀，其在生涯早期与谭延闿有过交锋。当时唐生智协同贺耀祖、叶开鑫把谭延闿从衡山赶回了广州。在接下来几年里，唐生智与叶开鑫不和，双方摩擦日渐增加，而前者认为后者更受赵的青睐。1926年3月，唐生智发动兵变反对赵恒惕，但是兵败而被迫逃往广州。\n\n唐生智受到了广州方面的欢迎，其部被改组为国民革命军第八军。唐生智和他统帅的第八军很快得以在北伐战争中证明自己的能力。他率部大举进攻湖南，赶走了赵恒惕，还接连战胜吴佩孚部。可惜北伐随后遭到了德意志帝国的干涉，总司令蒋介石惨死，中央委员会流亡巴黎，背靠德国的吴佩孚赢下了战争。\n\n唐生智率领第八军逃窜到了江西和福建的山区，并与孙传芳的八省联合斗争了数年。上海起义后，邓演达和宋庆龄率领临时行动委员会附属部队南下加入了唐生智，并建立了闽赣根据地以继续反抗。尽管国民党的情况不容乐观，这位“佛教将军”却坚信总有一天，他会将故乡从赵恒惕的不公统治中解放出来。§!"
  HNN_cheng_qian:0 "程潜"
  HNN_cheng_qian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1882年3月31日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g程潜生于一个富裕的耕读世家，从小接受着传统的儒家教育。十六岁便过童试中秀才、准备踏入学仕之路。然而在了解到19世纪中外时局后，程潜决定放弃科举之途、弃文习武，转至湖南武备学堂进修。成绩优异的他，被保送至日本留学。在那里，程潜结识了黄兴、宋教仁、李烈钧等革命家；又在1905年与孙中山面谈后当即加入同盟会。日后，他与唐继尧一同于日本陆军士官学校炮科毕业。\n\n辛亥革命爆发，程潜参加长沙会战。加入国民党后，他又在护国运动和护法运动中大展身手，证明了对孙中山理想的忠诚。1917年程潜率领湘南护法军驱逐了汤芗铭，随后被民主选举为湖南省长。\n\n由于其在与陈炯明冲突中支持孙中山，因而颇受器重、并于北伐战争前夕自办军校培养军事人材。孙中山建立黄埔军校时，曾一度考虑以程潜为校长。赢得东征战役胜利后，其被选为国民党中央执行委员会委员。同年其所辖湖南部队改组为国民革命军第六军。\n\n北伐战争开始后，他曾亲率第六军赴南昌作战。其部勇猛无比，攻无不克。可叹北伐事业失利，深陷湖南西部的第六军只得跟随国民党残部流窜到贵州。万幸的是程潜的第六军保全了实力，得以凭此与唐继尧谈判，争取其对国民党残部的庇护。\n\n如此一支雄师，在程潜的率领下在贵州韬光养晦，静静地等待崛起的时机。届时，第六军将再次尝试夺取湖南。这位老革命不仅在国民党内广受尊重，也在湖南省内威名显赫，其革命夙愿实现之日也许不远了。§!"
  HNN_yang_jie:0 "杨杰"
@@ -203,13 +203,13 @@
  HNN_liu_jianxu:0 "刘建绪"
  HNN_liu_jianxu_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1892年10月2日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g1913年，刘建绪进入进陆军第二预备学校，开始了其军旅生涯，走上了一条相当标准的军官职业道路。1915年毕业后，刘建绪进入保定军校学习，并于此结识了后来第八军军长何键。毕业后，刘建绪加入赵恒惕麾下湘军第一师，后来又加入了何键的地方游击队，抵抗北洋军阀。追随何键至唐生智麾下后，刘建绪作战英勇无畏，成为了何键的得力干将和知己。\n\n北伐战争期间，刘建绪旅在克复岳阳、夺取龟山和汉阳兵工厂、策反汉阳防守司令刘佐龙、光复汉阳汉口等战斗中表现突出。北伐结束后，刘建绪随何键撤至闽赣根据地，二人也在第八军内部建立起反社会主义的势力范围。\n\n在何键升任将军后，刘建绪也随之升至湖南清乡督办署任职，继续为其友人提供协助。§!"
  HNN_liu_xing:0 "刘兴"
- HNN_liu_xing_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年11月22日；大清帝国、湖南省祁阳县§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g1912年刘兴同唐生智一起进入保定陆军军官学校学习，二人因痛打教官引起陆军部震怒，将他们遣送回家。1916年，适逢湘人驱逐“汤屠户”汤芗铭，新任湖南督军刘人熙邀请刘兴和唐生智担职。刘兴在其好友帐下任职多年，一路升至旅长。1926年刘兴跟随被赵恒惕击退的唐生智，逃往广州。\n\n国民党和唐生智将其部队改组为国民革命军第八军，刘兴任第四师师长。北伐战争期间，刘兴身先士卒，率部与吴佩孚部激战，一举攻占汉口。尽管刘兴战绩辉煌，但北伐还是转向崩溃，刘兴又一次随唐生智逃亡到了闽赣乡间。如今距北伐已逾十载春秋，刘兴依然是唐生智忠实的跟班，一如当年离开保定之时。§!"
+ HNN_liu_xing_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年11月22日；大清帝国、湖南省祁阳县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g1912年刘兴同唐生智一起进入保定陆军军官学校学习，二人因痛打教官引起陆军部震怒，将他们遣送回家。1916年，适逢湘人驱逐“汤屠户”汤芗铭，新任湖南督军刘人熙邀请刘兴和唐生智担职。刘兴在其好友帐下任职多年，一路升至旅长。1926年刘兴跟随被赵恒惕击退的唐生智，逃往广州。\n\n国民党和唐生智将其部队改组为国民革命军第八军，刘兴任第四师师长。北伐战争期间，刘兴身先士卒，率部与吴佩孚部激战，一举攻占汉口。尽管刘兴战绩辉煌，但北伐还是转向崩溃，刘兴又一次随唐生智逃亡到了闽赣乡间。如今距北伐已逾十载春秋，刘兴依然是唐生智忠实的跟班，一如当年离开保定之时。§!"
  HNN_gong_hao:0 "龚浩"
- HNN_gong_hao_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省益阳县§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g龚浩是唐生智在保定军官学校的同学，很早就对革命政治抱有同情。龚浩参加了1911年武昌起义和1916年护国战争。1921年回湘任唐生智部作战参谋。唐生智加入国民党后，龚浩任任国民革命军第八军前敌总指挥部参谋长。\n\n北伐战争失败后，龚浩跟随唐生智入赣，第八军也随之隐匿其间，直到临委会部队与他们汇合，共同创建了闽赣根据地。龚浩也许算不上唐生智最忠诚的属下，但他在协助传授唐生智部新兵兵法上，又是个出色的教头。龚浩素有为人谦逊、热情好客之名，广受喜爱。他闲暇时间常读历史和中国经典，对老子道家思想颇有兴趣。§!"
+ HNN_gong_hao_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省益阳县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g龚浩是唐生智在保定军官学校的同学，很早就对革命政治抱有同情。龚浩参加了1911年武昌起义和1916年护国战争。1921年回湘任唐生智部作战参谋。唐生智加入国民党后，龚浩任任国民革命军第八军前敌总指挥部参谋长。\n\n北伐战争失败后，龚浩跟随唐生智入赣，第八军也随之隐匿其间，直到临委会部队与他们汇合，共同创建了闽赣根据地。龚浩也许算不上唐生智最忠诚的属下，但他在协助传授唐生智部新兵兵法上，又是个出色的教头。龚浩素有为人谦逊、热情好客之名，广受喜爱。他闲暇时间常读历史和中国经典，对老子道家思想颇有兴趣。§!"
  HNN_tao_guang:0 "陶广"
- HNN_tao_guang_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省醴陵县§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g陶广最初是个彩绘工人，后来弃艺从军，就读于北京和南京多所军校，学成后前往云南，在蔡锷部下任参谋。蔡锷死后他回到故乡湖南，在程潜、唐生智部先后任职。北伐期间，任第八军第二十六团团长。\n\n由于参加汀泗桥、贺胜桥等战役有功，他升任旅长。尽管武昌战役演变为了国民党的灾难，陶广还是设法为第八军保住了上千条枪，因而晋升师长。北伐崩溃后，其跟随唐生智入赣。在闽赣根据地的十年战火洗礼下，他成长为了一位经验丰富的游击战专家，深受唐生智敬重。§!"
+ HNN_tao_guang_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1887年；大清帝国、湖南省醴陵县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g陶广最初是个彩绘工人，后来弃艺从军，就读于北京和南京多所军校，学成后前往云南，在蔡锷部下任参谋。蔡锷死后他回到故乡湖南，在程潜、唐生智部先后任职。北伐期间，任第八军第二十六团团长。\n\n由于参加汀泗桥、贺胜桥等战役有功，他升任旅长。尽管武昌战役演变为了国民党的灾难，陶广还是设法为第八军保住了上千条枪，因而晋升师长。北伐崩溃后，其跟随唐生智入赣。在闽赣根据地的十年战火洗礼下，他成长为了一位经验丰富的游击战专家，深受唐生智敬重。§!"
  HNN_li_pinxian:0 "李品仙"
- HNN_li_pinxian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1890年4月22日；大清帝国、广西省苍梧县§!\n§Y派系：§!§S第八军§!\n§Y军旅生涯：§!§g李品仙出生于苍梧县的一个望族家庭，他自幼长于经典，勤奋好学，擅属诗作文。他参与科举时，县试、府试一路过关斩将，但由于不小心漏抄一页试卷而折戟院试。\n\n仕途毁于一旦，李品仙决定报考蔡锷创办的广西陆军小学，开始其军旅生涯。1909年毕业后升入湖北第三陆军中学，后又于1911年毕业，同时直接参与了武昌起义。\n\n为了策应起义，李品仙冒险赴桂煽动当地革命，但因陆荣廷宣布独立而受挫。1913年，他到保定军校学习，次年毕业。由于不满于桂军，他又转入湘军任职，在那里他结识了学长唐生智。唐生智升一次官，李品仙就跟着被提拔，八年间他从排长升至旅长。跟随唐生智加入国民革命军后，李品仙被任命为第八军第三师师长，并参加了北伐战争，后又加入了国民党。北伐军兵败后，他在闽赣根据地顽强作战，静候时机。\n\n而最近，在程潜同唐生智的权力斗争中，李品仙又得到提拔，但他始终“不问政事”，专心于军事工作。§!\n\n§Y重要信息：李品仙受教育程度较高，平日里舞文弄墨，国民革命军中的同僚普遍认为他与人和善。§!"
+ HNN_li_pinxian_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1890年4月22日；大清帝国、广西省苍梧县§!\n§Y派系：§!§0第八军§!\n§Y军旅生涯：§!§g李品仙出生于苍梧县的一个望族家庭，他自幼长于经典，勤奋好学，擅属诗作文。他参与科举时，县试、府试一路过关斩将，但由于不小心漏抄一页试卷而折戟院试。\n\n仕途毁于一旦，李品仙决定报考蔡锷创办的广西陆军小学，开始其军旅生涯。1909年毕业后升入湖北第三陆军中学，后又于1911年毕业，同时直接参与了武昌起义。\n\n为了策应起义，李品仙冒险赴桂煽动当地革命，但因陆荣廷宣布独立而受挫。1913年，他到保定军校学习，次年毕业。由于不满于桂军，他又转入湘军任职，在那里他结识了学长唐生智。唐生智升一次官，李品仙就跟着被提拔，八年间他从排长升至旅长。跟随唐生智加入国民革命军后，李品仙被任命为第八军第三师师长，并参加了北伐战争，后又加入了国民党。北伐军兵败后，他在闽赣根据地顽强作战，静候时机。\n\n而最近，在程潜同唐生智的权力斗争中，李品仙又得到提拔，但他始终“不问政事”，专心于军事工作。§!\n\n§Y重要信息：李品仙受教育程度较高，平日里舞文弄墨，国民革命军中的同僚普遍认为他与人和善。§!"
  HNN_yang_xuancheng:0 "杨宣诚"
  HNN_yang_xuancheng_admiral_desc:0 "§Y海军将领介绍\n生于：§!§g1889年；大清帝国、湖南省长沙§!\n§Y派系：§!§L无派系§!\n§Y军旅生涯：§!§g杨宣诚生于一户家风朴实的传统家庭，自幼耕读。杨宣诚早年赴日本学习海军，后加入华兴会，这是由黄兴和宋教仁创立的同盟会前身组织之一。回国后曾任清军楚泰舰枪炮官。\n\n1913年，国民政府选派一批有功青年出国深造，杨宣诚经黄兴推荐被选派赴美国加州大学商学院。后因留学经费被取消，生活无着，乃再赴日本，任黄兴在东京开办的政法学校通译。他于1916年回国，在湖南高等师范任教，1920年冬应赵恒惕聘任湖南省政府交涉司司长。\n\n杨宣诚在赵恒惕、谭延闿政府中勤勤恳恳地工作了十多年，在省府中担任过多个新职位，积累了许多保障湖南水道安全的经验。然而，杨宣诚仍密切关注着新的革命性战法，他怀揣着重返海洋的雄心壮志，或许有朝一日杨宣诚能得偿夙愿。§!"
  HNN_Chen_Yi:0 "陈毅"
@@ -1285,53 +1285,75 @@
 
  HNN_dong_bi_wu_jiang_ling_dao_us:0 "董必武主席"
  HNN_dong_bi_wu_jiang_ling_dao_us_desc:0 "董必武在中国工团主义尚未流行之际就开始宣传工团主义，在五四运动，北伐战争中都有着十分活跃的身影。相对于国民党或是工团党党内的诸多激进派而言，董必武更加赞同革命是一个循序渐进的过程，他不同意立刻施行工团经济，彻底铲除私有化。而是主张暂时保留中小私人企业，在保留市场经济的前提下推动社会主义教育，社会主义法律的确立。"
- HNN_qiang_ying_tai_du:0 "强硬态度"
- HNN_qiang_ying_tai_du_desc:0 "工团党和国民党的合作在1927年失败的大革命中就已经结束，伴随着双方分别在江浙、湖南这一对邻省站稳脚跟。他们又不得不重新建立联系，但这一次主政湖南的工团党领导人们却不愿意再回到过去的那个合作关系中，他们希望彼此间保存对立互不隶属，只是合作共同北伐打败直系与清政府。"
+ HNN_xin_ding_dan:0 "重续订单"
+ HNN_xin_ding_dan_desc:0 "我们否定过去湖南的反动政权及其背后的封建地主、反动军阀和大买办阶级。但是我们并不会一棒子打倒过去的所有政策，尤其是我们渐进的革命政策以及中国半封建半殖民地的现实要求我们同民族资产阶级统战打倒三座大山的时候，过去湖南同广东的良好贸易关系将会被努力恢复从而帮助我们将湖南劳动者生产的产品卖向两广从而卖向全国。不过这次最终获利者不再是军阀、买办和封建地主，而是光荣的工农阶级。"
+ HNN_zheng_fu_gan_YU_shi_chang_jing_ji:0 "有限市场化"
+ HNN_zheng_fu_gan_YU_shi_chang_jing_ji_desc:0 "湖南是一个落后的农业大省，在这样的地方一味的强求所谓的一步发展到工团主义社会是痴人说梦的。在到达那个阶段之前，董必武认为需要一个缓冲时期，在这个时期中，允许发展一定程度的私营经济，尊重有限的市场空间。直到大工业化的原始积累达到能够支撑我们达到工团主义的时期。" 
+ HNN_jian_li_wu_jia_ju:0 "建立市场监督管理局"
+ HNN_jian_li_wu_jia_ju_desc:0 "社会主义的市场经济不能像资本主义那般任由他们无序发展，肆意扩张，为此董必武主席决定设立市场监督管理局以遏止无序扩张的市场。" 
+ HNN_liang_tiao_tui_zou_lu:0 "两条腿走路"
+ HNN_liang_tiao_tui_zou_lu_desc:0 "光发展农业是不够的，是单腿跳，短期内能够走路，但是不能长久。我们必须要拓展湖南贫瘠的工业，从最基础纺织业、食品加工业开始组建将湖南打造成一个工业强省。" 
  HNN_ban_bu_xin_xian_fa:0 "颁布新宪法"
  HNN_ban_bu_xin_xian_fa_desc:0 "过去的湖南省宪法只是披了一个民主的皮囊，实际上是军阀和地主阶级剥削工农劳动者的遮羞布。实践证明，在中国这个半封建半殖民地，只要广大工农阶级仍然被反动军阀、封建地主和帝国主义买办所压迫，那么中国甚至无法迎来真正的资产阶级民主。所以作为工农阶级的政党，工团党有责任撰写一套真正的民主宪法，这份宪法将会消灭旧宪法中为独裁专制铺路的漏洞，并且致力于建设法治和消灭封建主义、军阀主义和买办主义。不过让资产阶级自由派失望的是，虽然新宪法承认民族资产阶级目前的进步性并且保护其合法权益和所有制，但是其仍然更加偏向于工农阶级，毕竟我们的革命虽然是渐进的，但是其目标始终是走向社会主义民主而非资本主义。"
  HNN_jiao_yu_wu_chan_jie_ji:0 "教育无产阶级"
  HNN_jiao_yu_wu_chan_jie_ji_desc:0 "人民是伟大的，但是人民集合在一起却是茫然的。他们并不知晓工团主义是什么，他们也不完全知晓为什么资本主义、帝国主义对他们的压榨是如此的敲骨吸髓。我们需要广泛的宣传，教导他们为什么，并去回答他们提出的一切问题。"
- HNN_shi_he_zg_de_gong_tuan_zhu_yi:0 "湖南式工团主义"
- HNN_shi_he_zg_de_gong_tuan_zhu_yi_desc:0 "工团主义并非什么铁板一块的东西，除了我们都有着对美好未来的渴望以外，我们还有这许多可以商榷的地方。不仅是英法等国的工团主义无法被我们照搬。就算在国民党他们的左派所倡导的工团主义，那也是建立在江浙沪一带的工团主义，那儿的工业、教育都远比我们身处的湖南要发达得多。我们也无法照搬，我们需要根据湖南的工业特点，去传播适合湖南的工团主义。"
- HNN_xin_ding_dan:0 "重续订单"
- HNN_xin_ding_dan_desc:0 "我们否定过去湖南的反动政权及其背后的封建地主、反动军阀和大买办阶级。但是我们并不会一棒子打倒过去的所有政策，尤其是我们渐进的革命政策以及中国半封建半殖民地的现实要求我们同民族资产阶级统战打倒三座大山的时候，过去湖南同广东的良好贸易关系将会被努力恢复从而帮助我们将湖南劳动者生产的产品卖向两广从而卖向全国。不过这次最终获利者不再是军阀、买办和封建地主，而是光荣的工农阶级。"
- HNN_shi_ge_jiao_yu:0 "无产阶级的艺术"
- HNN_shi_ge_jiao_yu_desc:0 "艺术从来不是什么应该被束之高台，远离人民群众，仅供资产阶级贵族们地主们所享受的事物。那样的艺术只是一些俗套的空洞的享受。相反人民群众在劳动中一直不断的创造着属于普罗大众的真正的艺术。只有这些艺术才值得被推广。" 
- HNN_zheng_fu_gan_YU_shi_chang_jing_ji:0 "有限市场化"
- HNN_zheng_fu_gan_YU_shi_chang_jing_ji_desc:0 "湖南是一个落后的农业大省，在这样的地方一味的强求所谓的一步发展到工团主义社会是痴人说梦的。在到达那个阶段之前，董必武认为需要一个缓冲时期，在这个时期中，允许发展一定程度的私营经济，尊重有限的市场空间。直到大工业化的原始积累达到能够支撑我们达到工团主义的时期。" 
- HNN_gong_nong_gong_he_guo:0 "工农联盟"
- HNN_gong_nong_gong_he_guo_desc:0 "无论是未来的中国，还是当下的湖南省，在极长的一个时期内都将是一个以工农联盟为主，尤其是以农民为主的国家。在我们的这个国家中工人将负责制造新的工业品用以发展工业和提供给农民新的先进的农具。而农民将为这样的发展提供充足的粮食。在董必武的计划中，这个社会将达成充足可靠的循环" 
- HNN_gu_li_nong_ye_shen_chan:0 "鼓励农业生产"
- HNN_gu_li_nong_ye_shen_chan_desc:0 "粮食既是我们军事发展的基石也是目前我们最好的出口货物。为了争取更多的资金，我们需要扩大的农业生产的投资，鼓励农民多开垦多播种，不用担心种出来没有销路。" 
  HNN_yi_wu_jiao_yu:0 "义务教育"
  HNN_yi_wu_jiao_yu_desc:0 "农民有了自己的地一定会想要自家的孩子下地干活而不是进学校脱产学习。但是，我们的未来需要的不是无数的农民，而是无数的技术工人和科研人员，更好的科技，才能有更高的生产力，否则过去半个世纪的耻辱历史还会在中华大地再次上演。为此我们要在各乡各村的农户家中做思想工作，让农工子弟安安心心的读书，费用政府承担。" 
- HNN_jian_li_wu_jia_ju:0 "建立市场监督管理局"
- HNN_jian_li_wu_jia_ju_desc:0 "社会主义的市场经济不能像资本主义那般任由他们无序发展，肆意扩张，为此董必武主席决定设立市场监督管理局以遏止无序扩张的市场" 
+ HNN_jie_fang_fu_nu:0 "解放妇女"
+ HNN_jie_fang_fu_nu_desc:0 " " 
+ HNN_shi_ge_jiao_yu:0 "无产阶级的艺术"
+ HNN_shi_ge_jiao_yu_desc:0 "艺术从来不是什么应该被束之高台，远离人民群众，仅供资产阶级贵族们地主们所享受的事物。那样的艺术只是一些俗套的空洞的享受。相反人民群众在劳动中一直不断的创造着属于普罗大众的真正的艺术。只有这些艺术才值得被推广。" 
+ HNN_shi_he_zg_de_gong_tuan_zhu_yi:0 "湖南式工团主义"
+ HNN_shi_he_zg_de_gong_tuan_zhu_yi_desc:0 "工团主义并非什么铁板一块的东西，除了我们都有着对美好未来的渴望以外，我们还有这许多可以商榷的地方。不仅是英法等国的工团主义无法被我们照搬。就算在国民党他们的左派所倡导的工团主义，那也是建立在江浙沪一带的工团主义，那儿的工业、教育都远比我们身处的湖南要发达得多。我们也无法照搬，我们需要根据湖南的工业特点，去传播适合湖南的工团主义。"
+ HNN_qiang_ying_tai_du:0 "强硬态度"
+ HNN_qiang_ying_tai_du_desc:0 "工团党和国民党的合作在1927年失败的大革命中就已经结束，伴随着双方分别在江浙、湖南这一对邻省站稳脚跟。他们又不得不重新建立联系，但这一次主政湖南的工团党领导人们却不愿意再回到过去的那个合作关系中，他们希望彼此间保存对立互不隶属，只是合作共同北伐打败直系与清政府。"
+ HNN_gu_li_nong_ye_shen_chan:0 "鼓励农业生产"
+ HNN_gu_li_nong_ye_shen_chan_desc:0 "粮食既是我们军事发展的基石也是目前我们最好的出口货物。为了争取更多的资金，我们需要扩大的农业生产的投资，鼓励农民多开垦多播种，不用担心种出来没有销路。" 
+ HNN_zu_jian_nong_hui:0 "强化农会"
+ HNN_zu_jian_nong_hui_desc:0 "农会是农民们的天下，是为了农民的权益而斗争的地方，农村的一切都要收归农会，再由农民们自行分配。我们有的人还在犹豫着，不信任我们的农民，还抱有那种泥腿子怎么能治理好自己，农民是天然的保守主义、小资产阶级的旧思想，这一点尤其在我们的那些城市知识分子党员中最为突出。我们必须要用最严厉的教育告诉他们，中国的数万万农民有能力管理好天下，我们需要给农会更多的权力。" 
+ HNN_fu_quan_gong_hui:0 "赋权工会"
+ HNN_fu_quan_gong_hui_desc:0 "强势的工会是工团主义理论的核心，尽管在革命的早期我们需要将权力收归党所有，但是如今时局变化，我们需要割离一部分权力交予湖南省的各个工会，他们将获得对国民经济的重要掌控权。" 
+ HNN_gong_nong_gong_he_guo:0 "工农联盟"
+ HNN_gong_nong_gong_he_guo_desc:0 "无论是未来的中国，还是当下的湖南省，在极长的一个时期内都将是一个以工农联盟为主，尤其是以农民为主的国家。在我们的这个国家中工人将负责制造新的工业品用以发展工业和提供给农民新的先进的农具。而农民将为这样的发展提供充足的粮食。在董必武的计划中，这个社会将达成充足可靠的循环" 
  HNN_ge_ming_de_li_shi:0 "革命的历史"
  HNN_ge_ming_de_li_shi_desc:0 "自大泽乡陈胜吴广起义以来，中华人民的历史就是革命的历史，近代的洪秀全、孙中山先生的革命还历历在目。他们的事迹鼓舞着新一辈的革命者走上历史的舞台，为此我们要做的就是做好革命历史的修订工作，为后人讲述他们当时是如何做的。" 
- HNN_gao_ju_huo_ju:0 "高举火炬"
- HNN_gao_ju_huo_ju_desc:0 " " 
+ HNN_jing_ji_dong_yuan_qi_lai:0 "经济动员"
+ HNN_jing_ji_dong_yuan_qi_lai_desc:0 "我们经济改革的主要部分如今已经步入了正轨，因此我们可以将注意力转向即将到来的战争，我们必须使我们的经济为战争做好准备。我们需要增加对武器生产的补贴和宣传，提醒商人注意当前的战争和爱国主义的必要性，以此确保商界为即将到来的冲突做好准备。"
+ HNN_gao_qing_huo_ju:0 "高举火炬"
+ HNN_gao_qing_huo_ju_desc:0 "无产阶级正在呐喊。黑暗笼罩大地，黎明即将到来。一个幽灵，社会主义的幽灵，在旧世界的废墟上盘旋。它如同一座巍峨的火山，积蓄着无尽的能量，等待喷薄而出的那一刻。资产阶级，这群贪婪的掠夺者，榨干了劳动者的血汗，将世界变成了一个巨大的工厂。他们用黄金和铁链将我们束缚，让我们在贫困和绝望中挣扎。但我们，无产阶级，是这世界的创造者。我们的双手筑起了高楼大厦，我们的智慧推动了文明的进步。然而，我们却一无所有，只能在社会的底层苟延残喘。够了！我们不再忍气吞声，不再甘于被奴役。我们要挣脱身上的枷锁，重获自由！"
 
  HNN_peng_de_huai_jiang_ling_dao_us:0 "彭德怀主席"
  HNN_peng_de_huai_jiang_ling_dao_us_desc:0 "彭德怀曾是湖南一名不起眼的中下层军官，但在湖南的革命浪潮中他把握住了机会，而在内战之中他展露的战略水平远超于他中层军官的身份，在革命之中，人们开始将他与唐生智并列。凭借战争中的功勋，这位军事天才当选了湖南省的省主席，他必将带来湖南，带领工团主义的湖南一统中国！" 
  HNN_jun_shi_hua_zheng_fu_bu_meng:0 "暂时军管"
  HNN_jun_shi_hua_zheng_fu_bu_meng_desc:0 "文官政府有着许多好处，但有一个问题无法避免，那就是效率。现在实在是没有时间去和文官们打嘴巴仗了，我们必须抓紧机会，发展自己，统一中国。因此彭德怀下令暂时对政府实行军事化管理，同时他也承诺只要一统中国就归还民主召开全国人民大会，选举新的领袖。" 
- HNN_nong_chun_he_zuo_she:0 "农村合作社"
- HNN_nong_chun_he_zuo_she_desc:0 "湖南省的土地绝大多数掌握在地主手中，而广大的农民却连维持自己基本口粮都做不到。彭德怀决定清除这些地主们，但是直接将土地平等的分给每一户家庭，在一段岁月之后必然会产生新的地主们，而到了那时又不得不在做一次清理地主的重复工作。为了避免这样的事情发生，彭德怀决定建立农村合作社，农民们并不直接拥有土地，但是有权利参与到合作社的日常管理与利润分配工作中，他们有权利监督合作社的日常工作，以防止我们的政府官员腐化堕落，在每一次的官员任用上他们的意见将是最关键的。" 
  HNN_you_ji_hua_de_jing_ji:0 "有计划的经济"
  HNN_you_ji_hua_de_jing_ji_desc:0 "计划经济是新政府的关键经济政策，但是彭德怀想要的计划经济并不是那种对经济工作的方方面面都设置限制，政府支配经济的方方面面。让工厂可以在政府给予的指导意见制定自己的年度生产目标。如果目标得到满足，那么工人和他们的经理就会得到额外奖励，如果没有，也没有任何惩罚。以防止过大的权力滋生政府内的腐败问题。" 
+ HNN_nong_chun_he_zuo_she:0 "农村合作社"
+ HNN_nong_chun_he_zuo_she_desc:0 "湖南省的土地绝大多数掌握在地主手中，而广大的农民却连维持自己基本口粮都做不到。彭德怀决定清除这些地主们，但是直接将土地平等的分给每一户家庭，在一段岁月之后必然会产生新的地主们，而到了那时又不得不在做一次清理地主的重复工作。为了避免这样的事情发生，彭德怀决定建立农村合作社，农民们并不直接拥有土地，但是有权利参与到合作社的日常管理与利润分配工作中，他们有权利监督合作社的日常工作，以防止我们的政府官员腐化堕落，在每一次的官员任用上他们的意见将是最关键的。" 
  HNN_ji_xie_hua_nong_ju:0 "机械化农具"
  HNN_ji_xie_hua_nong_ju_desc:0 "生产是讲究客观规律的，在生产过程中工具的价值远高于劳动者自身的主观意愿。机械化的工具的平均生产力是好几个普通劳动者的平均生产力所不能及的。这在农业领域更加突出，一辆拖拉机、收割机可以解放三四个优质劳动力，让他们去生产更有价值的东西，又或者哪怕是多生产一辆拖拉机给予其他村落使用。政府应该推广这些有价值的机械农具，免费或是减免费用给农民使用。" 
- HNN_shi_shi_qiu_shi:0 "实事求是"
- HNN_shi_shi_qiu_shi_desc:0 "尽管在最大自由的计划经济下，腐败贪污现象依旧盛出不穷，军管的目的是为了增高效率，而非减低。但哪怕是处理了多起重点案件后，贪污现象依旧存在，而且不仅仅是贪污，谎报、瞒报、多报现象也依旧不减，为了解决这个问题。彭德怀宣布发动实事求是运动，奖励人民在日常劳动中监管官员，让他们发挥应有的权力。" 
  HNN_kuo_zhan_jiao_yu:0 "拓展教育"
  HNN_kuo_zhan_jiao_yu_desc:0 "湖南是一个落后的农业省份，这里充斥着目不识丁的农民们，他们一辈子知道如何耕种而无法融入我们所设定的那个新世界。但，这并不是他们的错，是旧社会没有给予他们应有的教育，而我们的新社会在教育新青年的过程中，也不能忽视中年、老年人。哪怕他们不能够做一些高难度的科研活工业操作，也应该会读一点字，至少应该知道自己的名字该如何书写，会阅读一点儿报纸，知道湖南的发展和今日湖南发生的新闻。" 
- HNN_fa_zhan_zhong_gong_ye:0 "发展重工业"
- HNN_fa_zhan_zhong_gong_ye_desc:0 "为了解放全中国，仅有农业和轻工业是不足的。我们必须做好准备，在战争情况下，我们的工厂是远远不够的。我们必须重建军工复合体，使武器生产和重工业成为我们的优势。" 
  HNN_jun_dui_chun_jie_hua:0 "农村知识分子"
  HNN_jun_dui_chun_jie_hua_desc:0 "旧中国的知识分子总有一种误解，他们立足于城市，口中经常谈着一些共和、民主一类的言论，却不顾中国的劳苦大众根本不懂这些高大上的理论。我们的新社会中，知识分子应该是在劳动中去学习去改变理念，劳动是重要的一环，在农村中与农民们生活在一起，了解这些占据了我们中国绝大多数的农民们的日常生活和他们的需求。" 
+ HNN_shi_shi_qiu_shi:0 "实事求是"
+ HNN_shi_shi_qiu_shi_desc:0 "尽管在最大自由的计划经济下，腐败贪污现象依旧盛出不穷，军管的目的是为了增高效率，而非减低。但哪怕是处理了多起重点案件后，贪污现象依旧存在，而且不仅仅是贪污，谎报、瞒报、多报现象也依旧不减，为了解决这个问题。彭德怀宣布发动实事求是运动，奖励人民在日常劳动中监管官员，让他们发挥应有的权力。" 
  HNN_si_xiang_ying_ling:0 "党指挥枪"
- HNN_si_xiang_ying_ling_desc:0 "革命军队必须与无产阶级一起推翻资本家的政权。我们必然无法通过和平方式在革命斗争中取胜，而且在我党与国民党的第一次合作中，因为忽视了军队的争取，片面地着重于民众运动，从而和国民党一同在大革命失败后流散四方，甚至于连最初建立根据地都不如国民党轻松。而我军执行的政治任务是通过武装斗争推翻‘三座大山’、建立新中国，就是枪杆子里面出政权。" 
+ HNN_si_xiang_ying_ling_desc:0 "革命军队必须与无产阶级一起推翻资本家的政权。我们必然无法通过和平方式在革命斗争中取胜，而且在我党与国民党的第一次合作中，因为忽视了军队的争取，片面地着重于民众运动，从而和国民党一同在大革命失败后流散四方，甚至于连最初建立根据地都不如国民党轻松。而我军执行的政治任务是通过武装斗争推翻‘三座大山’、建立新中国，就是枪杆子里面出政权。"
+ HNN_fa_zhan_zhong_gong_ye:0 "发展重工业"
+ HNN_fa_zhan_zhong_gong_ye_desc:0 "为了解放全中国，仅有农业和轻工业是不足的。我们必须做好准备，在战争情况下，我们的工厂是远远不够的。我们必须重建军工复合体，使武器生产和重工业成为我们的优势。"  
+ HNN_bu_tie_you_zhi_qi_ye:0 "补贴优质企业"
+ HNN_bu_tie_you_zhi_qi_ye_desc:0 "尽管湖南积贫积弱，但是身为四战之地，湘军、直系、皖系、赵恒惕，他们为了维持自己的统治纷纷在湖南建立起了属于他们自己的军火企业，这些企业被我们接管后便迎来了社会主义改造。工人拥有工厂，工人管理工厂，这些军工企业摆脱了旧有官僚主义、资本主义障碍后必然将发展得更加繁荣。"  
+ HNN_jun_shi_hua_qing_nan_tuan:0 "军事化青年团"
+ HNN_jun_shi_hua_qing_nan_tuan_desc:0 "湖南社会主义青年团是汤芗铭时期毛泽东同志建立的一个地下组织用以吸纳进步青年。如今我们的主要任务发生了改变，青年团的主要也应当发生改变，青年团将用以培训那些有志参军的进步青年，他们将接受军事化教育，用以培训成最为出色的社会主义战士。" 
+ HNN_kuo_bian_chi_wei_dui:0 "扩编赤卫队"
+ HNN_kuo_bian_chi_wei_dui_desc:0 "作为民兵组织，赤卫队在我们同汤芗铭、赵恒惕等军阀斗争中发挥了非同寻常的作用。如今在更加广袤的战场上，赤卫队很显然不能再像过去那样发挥作用，因此他们将尽数整编，除了一些具有保卫乡村免受匪患侵害属性的部队之外其他部队都将扩编成一支支出色的红军，同时他们将继承赤卫队时期的编号永远牢记斗争岁月。"
+ HNN_wei_le_dou_zheng_er_tuan_jie:0 "为了斗争，团结一致"
+ HNN_wei_le_dou_zheng_er_tuan_jie_desc:0 "我们的任务艰巨万分。为了将我们祖国美丽的大好河山从反动派们的魔爪下解放出来，我们必然会付出许多代价。我们的母亲将失去她的儿子，我们的家庭可能支离破碎，我们将流尽我们的鲜血，然而我们不会有一丝一毫的退缩，这个世界上从来都没有什么救世主，一切的拯救都需要我们自己去取得，在这场全中华解放战争中党员们将身先士卒，做好榜样，所有人都将团结一致，为了那个共同的明天。"
+ HNN_wu_chan_jie_ji_da_ge_ming:0 "无产阶级的伟大革命"
+ HNN_wu_chan_jie_ji_da_ge_ming_desc:0 "从第一个工人握进手中的武器，咬紧牙关选择对抗这个腐朽的资本主义世界上，摆在我们无产阶级面前的就只有永恒的斗争，与天斗，与地斗，与一切反动派斗争。无产阶级没有回头路，一切迟疑都是背叛，没有一丝一毫的妥协能够被原谅。无产阶级们将证明，这个由他们创造的世界也最终会为他们所有。"
+ HNN_qian_jin_qian_Jin_qian_jin:0 "前进，前进，前进！"
+ HNN_qian_jin_qian_Jin_qian_jin_desc:0 "昂首挺胸，意气风发，我们的红军将士们有着中华历史上从未有过的精神面貌。他们思想坚定，他们渴望建立功勋，他们一心一意为了解放全中华而战。我们已经准备好，摆在我们面前的目标只有一个那便是去拯救那些被帝国主义、封建主义、资本主义荼毒数百年的我们的同胞们！前进！战无不胜的社会主义思想！将中华大地插遍赤旗！"
 
  HNN_tang_sheng_ming_jiang_ling_dao_us:0 "唐生明主席"
  HNN_tang_sheng_ming_jiang_ling_dao_us_desc:0 "唐生明是革命中牺牲的唐生智将军的弟弟，他对于反革命分子有着天然的敌意，在他的领导下，湖南的革命运动将会清除任何胆敢拦在革命面前的敌人。" 
@@ -1591,7 +1613,7 @@
 
 #工团统一后
  #flag
- HNN_PROC_victory:0 "中华人民共和国成立了"
+ HNN_PROC_victory:0 "§R无产阶级的伟大斗争§!胜利了！"
  HNN_zhong_yang_victory:0 "大会通过了中央集权制的方案"
  HNN_di_fang_victory:0 "大会通过了联邦共和制的方案"
  HNN_zizhiguo_victory:0 "大会通过了成立加盟国的提案"
@@ -3197,6 +3219,10 @@
  hungong.165.t:0 "中国超人张宝胜"
  hungong.165.d:0 "在众多的特异功能者中，辽宁省本溪市的张宝胜据说被排在众人之首。有消息称他已被做为“国宝”保护起来了。张宝胜外表与常人无异，一双眯缝眼给人一种厚道的感觉。但他却有诸多令人瞠目结舌的超级功能，使人难似置信。有关张宝胜特异功能的最初报道，是他能用鼻子嗅字。此后，人们就发现他还具有多方面令人咋舌的神奇功能。据说他可以遥感探物。有个科研单位的一个考察装置不慎掉入深海，即便用先进仪器寻找，连具体位置都定不不来。最后无可奈何的将张宝胜请去，他在沉物的海域内乘艇斑了几圈，就指明了沉物位置。他还能意念取物。有一次，在北京召开的一次会议上，有个对特异功能持否定态度的学术权威在台上作报告，内容就是否定特异功能。巧得很，张宝胜也在场。那位权威正照着自己写好的稿子往下念着，突然他停下不念了。听众不知发生丁什么事，都注视着他。那位权威正把自己的讲稿翻来复去地查找页数，很显然缺了中间的几页，使讲稿内容联系不上了。还是权域秘书机灵，他一见张宝胜在场，赶紧跑过去，好说歹说才从张宝胜的衣袋里找到了失踪讲稿的缺页，令会场上的听众很感意外。稿页是怎么到张宝胜手中的，也许只有他自己知道。\n\n张宝胜还有妙手回春的治病本领！这天早晨，北京部队作家宋绍明突然腹痛难忍，经诊断为肾结石。他把病情告诉了张宝胜。张宝胜说：“我把石头给你烧碎了，再给你抓出来。”只见宝胜把卫生纸散开放在一边，然后用双手在宋绍明右腹部轻轻揉搓。揉了一会儿，用卫生纸擦擦手心，然后伸出手来让大家看他手心里已沾上一些黄白色的粘糊物，似粉末，又有细细的颗粒。就这样他揉了擦擦了揉，经过几次治疗，当宋绍明怀着既庆幸又担心的复杂心情，再次到友谊医院去作B超、肾造影检查时，医生说，不见石头了。并递给他一张画着曲线的图说：“绝对没有结石了！”宋绍明免了挨两刀，一股喜悦涌上心头，他敬佩和感激宝胜：“神话，简直是神话！”\n\n有一次，张宝胜到东北某大学表演因为心情愉快，他同意做一次大规模的“障眼法”实验。开始时，有40多个机灵的大学生为了防止张宝胜有空可钻，干脆一个挨一个把几米宽的礼堂大门堵住，而礼堂的其它大小门也一律封住不微进头。可是，正在他们七嘴八舌商量对策，互相提醒要注意时，张宝胜却早已到了礼堂中间了。"
  hungong.165.a:0 "这真是中国超人"
+ hungong.166.t:0 "劳动妇女"
+ hungong.166.d:0 "妇女占据我省很大一部分人口。湖南的成年妇女大多是简单的农妇或家庭主妇，没有发言权。在社会主义教育以及女性同志们的努力已经开始将她们从传统家庭中解放出来，促使她们更多地参与大城市工厂的工作，并帮助其他女性提高自己的地位。只有男女在工作和收入上达成平等，女性能够依靠自己创造财富，有可能真正的解放自己，消除社会对女性的歧视。否则物质上依赖于男性，那么男女平权永远无法实现。"
+ hungong.166.a:0 "妇女能顶半边天"
+
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
