--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -268,11 +268,11 @@
  HNN_tou_zi_ji_chu_jian_she_desc:0 "§G我们需要清理出一片区域用来修建工厂。§!" 
  HNN_tou_zi_gong_chang:0 "投资工业建设"
  HNN_he_liang_guang_jun_fa_tan_pan:0 "与新桂系军阀合作"
- HNN_he_liang_guang_jun_fa_tan_pan_tooltip:0 "令人惊喜的是李宗仁在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。"
+ HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是李宗仁在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。!" 
  HNN_he_yun_nan_jun_fa_tan_pan:0 "与云南国民党人合作"
- HNN_he_yun_nan_jun_fa_tan_pan_tooltip:0 "令人惊喜的是朱培德在云南也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。"
+ HNN_he_liang_guang_jun_fa_tan_pan_desc:0 "令人惊喜的是朱培德在云南也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都对工团主义恨之入骨，想要开除汪精卫的党籍，我们一定有很多共同语言。!" 
  HNN_he_yun_nan_jun_fa_tan_pan_1:0 "与云南农工党合作"
- HNN_he_yun_nan_jun_fa_tan_pan_1_tooltip:0 "令人惊喜的是农工党在云南成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。"
+ HNN_he_yun_nan_jun_fa_tan_pan_1_desc:0 "令人惊喜的是农工党在云南成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。!" 
  HNN_he_liang_guang_jun_fa_tan_pan_1:0 "与两广合作"
  HNN_he_liang_guang_jun_fa_tan_pan_1_desc:0 "令人惊喜的是两广的人民在广州也成功夺取了权力，他们曾与我们有着密切来往，更何况我们都想要以社会主义解放中国，尽管我们有着诸多分歧，但在当下，一切都是可以谈判修改的。"
  HNN_he_meng_gu_jun_fa_tan_pan_1:0 "与蒙古合作"
@@ -453,7 +453,7 @@
  HNN_arise_hunans_peasantry_idea:0 "精巧的军火制造"
  HNN_arise_hunans_peasantry_idea_desc:0 "湖南工业不如沈阳、太原或是金陵那样辉煌，但我们仍可以用聪明才智来弥补军备能力的不足。通过翻新现有机器，并回收、重复利用废弃旧装备，湖南的兵工厂也可以高效地为新一代的战士生产新一代步枪。"
  HNN_mass_conscription_idea:0 "舆论宣传"
- HNN_mass_conscription_idea_desc:0 "男儿何不带吴钩，收取关山五十州"
+ HNN_mass_conscription_idea_desc:0 "男儿何不带吴钩，收取关山五十州。请君暂上凌烟阁，若个书生万户侯。"
  HNN_imported_fighters_ger:0 "飞机出口"
  HNN_The_Pursuit_of_Knowledge:0 "追求新知"
  HNN_subsidizedmilitaryindustry:0 "补贴军用工业"
@@ -487,7 +487,7 @@
  HNN_CHI_Send_Cheng_Qian_tooltip:0 "§Y程潜被派往湖南参加选举。§!"
  HNN_open_foreign_policy_tooltip:0 "§Y赵恒惕将开始与不同的军阀建立更多的外交关系。§!"
  HNN_ad_open_fp_tt:0 "§Y解锁§!§R外交政策§!"
- HNN_revolutionary_miltia_tt:0 "§Y湖南农民将动员并组建起§!§R3支革命民兵部队§!"
+ HNN_revolutionary_miltia_tt:0 "§Y湖南农民将动员并组建起§!§R4支革命民兵部队§!"
  HNN_regional_tt:0 "我们将寻求更密切的经济联系，并得到阵营领袖的经济援助。"
  HNN_formenting_the_kuomintang_revival_tt:0 "§R尽管我们的同志倒下了，但国民党的梦想尚未破灭！我们会让湖南政府成为国家统一的竞争者！§!"
  HNN_tang_may_leave_tt:0 "湖南可能会脱离我们的阵营。"
@@ -1172,7 +1172,7 @@
  HNN_revolutionary_army_tt:0 "§Y湖南农工将被动员起来组成§!§R一支革命军事力量§!"
  HNN_revolutionary_tt:0 "§R我们将为解放全中国而奋斗§!"
 
- HNN_gong_tuan_victory_flag:0 "工团起义成功"
+ HNN_gong_tuan_victory_flag:0 "§R工团起义§!成功"
  HNN_jundui_junshi:0 "红军计划得到大会一致赞同"
  HNN_wenguan_junshi:0 "赤卫队计划得到大会一致赞同"
  HNN_qiangying_KMT:0 "大会决定对国民党强硬"
@@ -1234,6 +1234,11 @@
  HNN_syndicalist_party_he:0 "国民党"
  HNN_syndicalist_party_he_long:0 "国民党"
 
+ HNN_militia_idea:0 "革命武装"
+ HNN_militia_idea2:0 "赤卫队"
+ HNN_militia_idea3:0 "红军"
+ HNN_she_hui_zhu_yi_yu_wen:0 "社会动荡"
+ HNN_she_hui_zhu_yi_yu_wen_desc:0 "尽管我们已经夺取了湖南省的权力，但是汤芗铭和赵恒惕等人的残部却不愿意就此离开，湖南的商人们也不会就这样抛下他们的积蓄，在我们彻底将湖南省改造为社会主义政权前我们不得不面临一段时间的社会动荡。"
  HNN_direndejiaoxun:0 "革命的教训"
  HNN_direndejiaoxun_desc:0 "1927年，那不只是国民党的失败，那也是我们的失败。至今，我们仍然不知道有多少同志慷慨就义。受控于国民党人的道路已经被证明是无法成功的，我们要走出自己的道路来。革命万岁！"
  HNN_five_year_plan:0 "第一个五年计划"
@@ -1256,9 +1261,12 @@
  HNN_central_command_idea:0 "集中指挥"
  HNN_gai_ge_jiao_yu:0 "改革教育"
  HNN_gai_ge_jiao_yu2:0 "义务教育"
- HNN_half_Social_economy2:0 "半市场经济"
  HNN_gong_nong_gong_he:0 "工农共和"
  HNN_chun_jie_de_jun_de:0 "纯洁的军队"
+ HNN_chun_jie_de_jun_de3:0 "前进！前进！前进！"
+ HNN_chun_jie_de_jun_de3_desc:0 "起来，起来！不愿做奴隶的人们！把我们的血肉，筑成我们新的长城！中华民族到了最危险的时候，每个人被迫着发出最后的吼声。起来！起来！起来！我们万众一心，冒着敌人的炮火，前进！冒着敌人的炮火，前进！前进！前进！进！"
+ HNN_chantiers_de_la_jeunesse:0 "军事化青年团"
+ HNN_chantiers_de_la_jeunesse_desc:0 "为了祖国的荣光！"
  HNN_american_peoples_navy:0 "新海军计划"
  HNN_revolutionary_naval_industry_1:0 "革命海军工业计划"
  HNN_revolutionary_naval_industry_2:0 "革命海军工业计划"
@@ -1269,7 +1277,7 @@
  HNN_tu_di_gai_ge_hunan_category:0 "土地革命"
  HNN_tu_di_gai_ge_hunan_category_desc:0 "湖南省的革命第一步一定是土地革命，地主阶级的土地所有制将被彻底消灭，取而代之的是广大农民翻身成为土地的主人，农村生产力得到将得到极大解放。\n\n§g当湖南省的土地改革结束后，你将得到工厂与政治点数作为回报，与此同时，全国统一后的土地改革进度也会得到提升。§!"
  HNN_syn_agricultural_reform_mission_timer:0 "土地革命进程"
- HNN_syn_agricultural_reform_mission_timer_desc:0 "这是一场依靠雇农、贫农，联合中农，保护中小工商业，限制富农，消灭地主阶级，变封建和半封建的土地所有制，为农民的土地所有制的土地革命"
+ HNN_syn_agricultural_reform_mission_timer_desc:0 "这是一场依靠雇农、贫农，联合中农，保护中小工商业，限制富农，消灭地主阶级，变封建和半封建的土地所有制，为农民的土地所有制的土地革命。"
  HNN_zu_zhi_nong_hui:0 "组织农会"
  HNN_zu_zhi_nong_hui_desc:0 "农民的主要攻击目标是土豪劣绅，不法地主，旁及各种宗法的思想和制度，城里的贪官污吏，乡村的恶劣习惯。这个攻击的形势，简直是急风暴雨，顺之者存，违之者灭。其结果，把几千年封建地主的特权，打得个落花流水。地主的体面威风，扫地以尽。地主权力既倒，农会便成了唯一的权力机关，真正办到了人们所谓“一切权力归农会”。连两公婆吵架的小事，也要到农民协会去解决。一切事情，农会的人不到场，便不能解决。"
  HNN_qing_suan_di_zhu:0 "清算地主豪绅"
@@ -1277,6 +1285,13 @@
  HNN_zu_zhi_he_zuo_he:0 "组织合作社"
  HNN_zu_zhi_he_zuo_he_desc:0 "合作社，特别是消费、贩卖、信用三种合作社，确是农民所需要的。他们买进货物要受商人的剥削，卖出农产要受商人的勒抑，钱米借贷要受重利盘剥者的剥削，他们很迫切地要解决这三个问题。去冬长江打仗，商旅路断，湖南盐贵，农民为盐的需要组织合作社的很多。地主“卡借”，农民因借钱而企图组织“借贷所”的，亦所在多有。大问题，就是详细的正规的组织法没有。各地农民自动组织的，往往不合合作社的原则，因此做农民工作的同志，总是殷勤地问“章程”。假如有适当的指导，合作社运动可以随农会的发展而发展到各地。"
  HNN_liang_shi_chu_kou:0 "粮食出口"
+ HNN_cong_di_san_guo_ji_jin:0 "进口肥料"
+ HNN_xiao_mie_feng_jin:0 "消灭乡村封建主义"
+ HNN_xiao_mie_feng_jin_desc:0 "封建主义是帝国主义和官僚资本主义的同盟者及其统治的基础。因此，土地制度的改革，是中国乡村社会主义革命的主要内容。它只能是和必须是无产阶级领导的，人民大众的，反对帝国主义、封建主义和官僚资本主义的革命。这就是说，这个革命不能由任何别的阶级和任何别的政党充当领导者，只能和必须由无产阶级和中国工团党充当领导者。这个革命所要推翻的敌人，只是和必须是帝国主义、封建主义和官僚资本主义。这些敌人的集中表现，就是以直系军阀为主的反动军阀统治。"
+ HNN_jiu_zheng_ji_zuo_cuo_wu:0 "纠正极左错误"
+ HNN_jiu_zheng_ji_zuo_cuo_wu_desc:0 "如今我们的土地改革工作中存在一系列过度左倾激进的部分。第一，在划分阶级成分中，在许多地方把许多并无封建剥削或者只有轻微剥削的劳动人民错误地划到地主富农的圈子里去，错误地扩大了打击面，忘记了我们在土地改革工作中可能和必须团结农村中户数百分之九十二左右，人数百分之九十左右，即全体农村劳动人民，建立反对封建制度的统一战线这样一个极端重要的战略方针。第二，在土地改革工作中侵犯了属于地主富农所有的工商业；在清查经济反革命的斗争中，超出了应当清查的范围；以及在税收政策中，打击了工商业。这些，都是属于对待工商业方面的“左”的偏向。第三，在激烈的土地改革斗争中，部分村镇的党组织没有能够明确地坚持我党严禁乱打乱杀的方针，以致在某些地方的土地改革中不必要地处死了一些地主富农分子，并给农村中的坏分子以乘机报复的可能，由他们罪恶地杀死了若干劳动人民。我们认为，经过人民法庭和民主政府，对于那些积极地并严重地反对人民民主革命和破坏土地改革工作的重要的犯罪分子，即那些罪大恶极的反革命分子和恶霸分子，判处死刑，是完全必要和正当的。不如此，就不能建立民主秩序。但是，对于一切站在国民党方面的普通人员，一般的地主富农分子，或犯罪较轻的分子，则必须禁止乱杀。我们需要立即纠正以上偏差，按照实际情况决定工作方针，我们所犯的错误，研究其发生的原因，都是由于我们离开了当时当地的实际情况，主观地决定自己的工作方针。这一点，应当引为全体同志的教训。"
+ HNN_zheng_dun_dang_nei:0 "整顿基层党组织"
+ HNN_zheng_dun_dang_nei_desc:0 "根据毛泽东同志在湘潭等地的经验，我们需要在全省内进行一场整党运动，邀集党外群众中的积极分子参加党的支部会议，展开批评和自我批评，借以改变党的组织的成分不纯或者作风不纯的现象，使党和人民群众密切地联系起来。对于那些犯了错误但是还可以教育的、同那些不可救药的分子有区别的党员和干部，不论其出身如何，都应当加以教育，而不是抛弃他们。"
 
  HNN_gongtuan:0 "工团夺取了政权"
  HNN_gongtuan_desc:0 "在军阀们的反动面目昭告于天下后，湖南的劳动群众支持湖南的工团党支部发动了一场大革命推翻长沙腐朽的反动独裁政府，建立起来了第一个由工团党主政的革命政权，但是不管是工团党内还是党外群众都不知道工团党将为湖南带来什么样的未来。"
@@ -1398,28 +1413,39 @@
 #工团军改
  HNN_improve_army:0 "军队改革"
  HNN_improve_army_desc:0 "湖南省的旧军队就是一帮兵痞，而工团的新军人数又太少，湖南省的军队急需一场改革。" 
+ HNN_purge_militia_remains:0 "接受新理论"
+ HNN_purge_militia_remains_desc:0 "既然军队的秩序已经被改造了，那我们就得充分利用后勤，传达与军令系统，这些琐事能帮我们赢得最终胜利。"
+
  HNN_officer_corps_experience:0 "分散化管理"
  HNN_officer_corps_experience_desc:0 "我们的军队应该是去中心化，但他们现在仍依靠低效的指挥链来制定战术决策。我们必须向士官，甚至是最卑微的民兵们灌输让他们按照自己的意愿领导部队的精神。任何人都不应该等待别人给他下达命令。" 
  HNN_formazione_di_difesa:0 "发动群众"
  HNN_formazione_di_difesa_desc:0 "民兵的进攻能力有目共睹，但若想取得胜利，我们还需要动员人民组织一支防卫队伍。我们并不会为此打乱正规军的职责和战术，而是利用民兵填补防卫的空缺，让大部队能够腾出手来专心对付敌人。" 
- HNN_central_command:0 "中央指挥"
- HNN_central_command_desc:0 "我们应该建立一个中央指挥部，以加强我们各作战单位的交流与合作。这将使我们更加高效地部署并准备大规模作战。" 
- HNN_reform_modena_military_academy:0 "修建陆军军官学校"
- HNN_reform_modena_military_academy_desc:0 "事实就摆在那里：我们军官队伍的专业化水平仍显不足。湖南省虽有一些起于封建的军事学校，但如今也破败不堪，而我们将像黄埔军校那样，社会主义与军队相结合的无数新奇学说蒋诞生在那里。严格的课程设置，加上更高的学习标准，我们定能把这里的众多思想融入进政策之中，让其为军队所用。"
  HNN_reform_militia:0 "训练民兵组织"
  HNN_reform_militia_desc:0 "中国有着几千年的诸如清末团练这样的机构，他们训练村落男性基本的军事知识和锻炼他们的身体，在旧中国这些人只能作为地主豪强的看家护卫，但是在新中国他们就是最好的士兵来源，我们可以对他们加以改造形成一支支强有力的民兵组织。"
- HNN_purge_militia_remains:0 "接受新理论"
- HNN_purge_militia_remains_desc:0 "既然军队的秩序已经被改造了，那我们就得充分利用后勤，传达与军令系统，这些琐事能帮我们赢得最终胜利。"
- HNN_dissolve_militias:0 "重新建军"
- HNN_dissolve_militias_desc:0 "湖南省的旧军队是如此的腐朽不堪一击，无论敌伪政权之前采取了何种政策，现在只有纪律才是我们前进的唯一方向。"
  HNN_maintain_officer_autonomy:0 "轻型化游击部队"
  HNN_maintain_officer_autonomy_desc:0 "整个中国最大的特点就是工业落后，我们要对付的旧军阀并没有什么空中力量也没有坦克等机动武装，他们唯有火炮，对此我们可以打游击战，打持久战，将我们的武装力量散出去，建立根据地，一点一点吃掉敌人的军队。"
- HNN_revolutionary_army:0 "革命军队"
+ HNN_revolutionary_army:0 "意识形态教育"
  HNN_revolutionary_army_desc:0 "我们不仅要发动革命，而且要保卫革命，还要尽可能广泛地传播革命。为了社会主义，为了我们自己，我们必须向军队保证，把它放在第一位。"
+ HNN_qu_shi_fan_dui_pai:0 "扩大军工生产"
+ HNN_qu_shi_fan_dui_pai_desc:0 "在生产军备上我们可不能处在劣势。我们会为工厂制订生产配额，要求它们每周都生产足够数量的装备，以维持军队的活力。工人们得努力工作起来，而不能随便偷懒。因为现在不是松懈的时候，一颗子弹、一枚炮弹或一颗炸弹都可能决定胜负。"
+ HNN_ge_ming_jun_dui:0 "革命军队"
+ HNN_ge_ming_jun_dui_desc:0 "最终，我们的士兵知道了他们在为什么样的未来而战。过去，军阀的军队只为了他们的一己私利而发动战争，如今，我们为打碎这个国家的工人身上的枷锁而战。人民理解了利害关系，我们也是。国家的男男女女都会在某方面成为整场战争的一部分，齐心协力，我们将共同实现一同规划的未来。"
+
+ HNN_central_command:0 "中央指挥"
+ HNN_central_command_desc:0 "我们应该建立一个中央指挥部，以加强我们各作战单位的交流与合作。这将使我们更加高效地部署并准备大规模作战。" 
+ HNN_dissolve_militias:0 "重新建军"
+ HNN_dissolve_militias_desc:0 "湖南省的旧军队是如此的腐朽不堪一击，无论敌伪政权之前采取了何种政策，现在只有纪律才是我们前进的唯一方向。我们要将从前松散的赤卫队打造成一支牢不可破、战无不胜的红军"
+ HNN_reform_modena_military_academy:0 "修建陆军军官学校"
+ HNN_reform_modena_military_academy_desc:0 "事实就摆在那里：我们军官队伍的专业化水平仍显不足。湖南省虽有一些起于封建的军事学校，但如今也破败不堪，而我们将像黄埔军校那样，社会主义与军队相结合的无数新奇学说蒋诞生在那里。严格的课程设置，加上更高的学习标准，我们定能把这里的众多思想融入进政策之中，让其为军队所用。"
+ HNN_modernized_army:0 "职业化操练"
+ HNN_modernized_army_desc:0 "只要我们的每一名士兵都比敌军的士兵更加训练有素和准备充分，我军自然就能比敌军更加优越。虽然许多人认为在这场内战中我们拥有规模最庞大的军队，但这就能保证我们必胜了吗？我们不应该依靠单纯的数字优势，而应该确保无论我们面对多少敌人，都能以完善准备和精密计划战胜他们。"
  HNN_motorised:0 "配备重火力"
  HNN_motorised_desc:0 "每个人都要配齐他的步枪和手雷，每个步兵班都要配齐一挺机枪。通过组织我方部队互相之间提供火力支援，我们可以创立一种新的火力支援形式。每次当一支部队取得进展时候，其他所有部队则会紧随其后用火力压制敌军。通过波次利用这种战术，我军能在地面战斗时迅速取得进展。现在是时候为我们的部队装备足够的火力了。"
- HNN_modernized_army:0 "职业红军"
- HNN_modernized_army_desc:0 "红军已经成了一台运转良好的机器。单凭爆破火力，我们就比对手更有优势了，而且更进一步，我军还成为了一支职业化军队。这样做的唯一缺点可能是失去了一些军事的灵活性，但我们认为这无关紧要。赢得战争所需的炮弹和子弹，我们有的是！"
+ HNN_zhi_ye_hong_kun:0 "职业红军"
+ HNN_zhi_ye_hong_kun_desc:0 "我们的军队再也不会被嘲笑了。如今我军已是一支不可忽视的力量，我们的精密协调和详尽计划帮助我们在战场上所向无敌。每一位士兵的战斗精神和意志力都是我们赢得这场战争的砝码。红军将为我们梦想中的中华而战；为了解放劳苦大众、为了自由和正义而战。"
+ HNN_ren_ming_jun_dui:0 "人民军队"
+ HNN_ren_ming_jun_dui_desc:0 "我军是党绝对领导下的人民军队，是执行革命政治任务的武装集团。从创建那天起，我军就以党的宗旨为宗旨，以党的旗帜为旗帜，以党的目标为目标，以党的意志为意志。守护中华人民，为中华人民而战。"
+
  HNN_over_time:0 "尘埃落定"
  HNN_over_time_desc:0 "随着革命即将胜利，我们必须重新评估我们的军队的状况。已经有数条建议被提出以完善军队体系。"
 
@@ -1886,6 +1912,7 @@
  HNN_zhi_zi:0 "工人自治"
  HNN_zhi_zi_desc:0 "工人自治是生产资料所有制的公有性质的表现和证明，不论现在和将来都会给生产和经济以经常的新的推动。"
  HNN_ge_ming_shi:0 "革命的历史"
+ HNN_KOMMANDOWIRTSCHAFT:0 "计划经济"
  ENG_mobilized_industry_idea2:0 "五十年计划"
  ENG_mobilized_industry_idea3:0 "五十年计划"
  ENG_mobilized_industry_idea4:0 "五十年计划"
@@ -3220,7 +3247,7 @@
  hungong.165.d:0 "在众多的特异功能者中，辽宁省本溪市的张宝胜据说被排在众人之首。有消息称他已被做为“国宝”保护起来了。张宝胜外表与常人无异，一双眯缝眼给人一种厚道的感觉。但他却有诸多令人瞠目结舌的超级功能，使人难似置信。有关张宝胜特异功能的最初报道，是他能用鼻子嗅字。此后，人们就发现他还具有多方面令人咋舌的神奇功能。据说他可以遥感探物。有个科研单位的一个考察装置不慎掉入深海，即便用先进仪器寻找，连具体位置都定不不来。最后无可奈何的将张宝胜请去，他在沉物的海域内乘艇斑了几圈，就指明了沉物位置。他还能意念取物。有一次，在北京召开的一次会议上，有个对特异功能持否定态度的学术权威在台上作报告，内容就是否定特异功能。巧得很，张宝胜也在场。那位权威正照着自己写好的稿子往下念着，突然他停下不念了。听众不知发生丁什么事，都注视着他。那位权威正把自己的讲稿翻来复去地查找页数，很显然缺了中间的几页，使讲稿内容联系不上了。还是权域秘书机灵，他一见张宝胜在场，赶紧跑过去，好说歹说才从张宝胜的衣袋里找到了失踪讲稿的缺页，令会场上的听众很感意外。稿页是怎么到张宝胜手中的，也许只有他自己知道。\n\n张宝胜还有妙手回春的治病本领！这天早晨，北京部队作家宋绍明突然腹痛难忍，经诊断为肾结石。他把病情告诉了张宝胜。张宝胜说：“我把石头给你烧碎了，再给你抓出来。”只见宝胜把卫生纸散开放在一边，然后用双手在宋绍明右腹部轻轻揉搓。揉了一会儿，用卫生纸擦擦手心，然后伸出手来让大家看他手心里已沾上一些黄白色的粘糊物，似粉末，又有细细的颗粒。就这样他揉了擦擦了揉，经过几次治疗，当宋绍明怀着既庆幸又担心的复杂心情，再次到友谊医院去作B超、肾造影检查时，医生说，不见石头了。并递给他一张画着曲线的图说：“绝对没有结石了！”宋绍明免了挨两刀，一股喜悦涌上心头，他敬佩和感激宝胜：“神话，简直是神话！”\n\n有一次，张宝胜到东北某大学表演因为心情愉快，他同意做一次大规模的“障眼法”实验。开始时，有40多个机灵的大学生为了防止张宝胜有空可钻，干脆一个挨一个把几米宽的礼堂大门堵住，而礼堂的其它大小门也一律封住不微进头。可是，正在他们七嘴八舌商量对策，互相提醒要注意时，张宝胜却早已到了礼堂中间了。"
  hungong.165.a:0 "这真是中国超人"
  hungong.166.t:0 "劳动妇女"
- hungong.166.d:0 "妇女占据我省很大一部分人口。湖南的成年妇女大多是简单的农妇或家庭主妇，没有发言权。在社会主义教育以及女性同志们的努力已经开始将她们从传统家庭中解放出来，促使她们更多地参与大城市工厂的工作，并帮助其他女性提高自己的地位。只有男女在工作和收入上达成平等，女性能够依靠自己创造财富，有可能真正的解放自己，消除社会对女性的歧视。否则物质上依赖于男性，那么男女平权永远无法实现。"
+ hungong.166.d:0 "妇女占据我省很大一部分人口。湖南的成年妇女大多是简单的农妇或家庭主妇，没有发言权。在社会主义教育以及女性同志们的努力已经开始将她们从传统家庭中解放出来，促使她们更多地参与大城市工厂的工作，并帮助其他女性提高自己的地位。而只有男女在工作上达成同工同酬，女性能够依靠自己创造财富，有可能真正的解放自己，消除社会对女性的歧视。否则物质上依赖于男性，那么男女平权永远无法实现。"
  hungong.166.a:0 "妇女能顶半边天"
 
 
