--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1258,7 +1258,6 @@
  HNN_union_loyalty:0 "合作社经济"
  HNN_union_loyalty2:0 "合作社经济"
  HNN_educated_workers_idea:0 "有知识的农民"
- HNN_central_command_idea:0 "集中指挥"
  HNN_gai_ge_jiao_yu:0 "改革教育"
  HNN_gai_ge_jiao_yu2:0 "义务教育"
  HNN_gong_nong_gong_he:0 "工农共和"
@@ -1315,7 +1314,7 @@
  HNN_yi_wu_jiao_yu:0 "义务教育"
  HNN_yi_wu_jiao_yu_desc:0 "农民有了自己的地一定会想要自家的孩子下地干活而不是进学校脱产学习。但是，我们的未来需要的不是无数的农民，而是无数的技术工人和科研人员，更好的科技，才能有更高的生产力，否则过去半个世纪的耻辱历史还会在中华大地再次上演。为此我们要在各乡各村的农户家中做思想工作，让农工子弟安安心心的读书，费用政府承担。" 
  HNN_jie_fang_fu_nu:0 "解放妇女"
- HNN_jie_fang_fu_nu_desc:0 " " 
+ HNN_jie_fang_fu_nu_desc:0 "长久以来，女性一直遭受着反动派思想家的压迫。就算是在军阀治下，在政府无情的把她们的兄弟送上前线受死时，她们也在无私的为国家做出贡献。是时候意识到她们对社会做出的贡献，合法化劳动妇女的权益了——不论是在战争年代还是和平时期。" 
  HNN_shi_ge_jiao_yu:0 "无产阶级的艺术"
  HNN_shi_ge_jiao_yu_desc:0 "艺术从来不是什么应该被束之高台，远离人民群众，仅供资产阶级贵族们地主们所享受的事物。那样的艺术只是一些俗套的空洞的享受。相反人民群众在劳动中一直不断的创造着属于普罗大众的真正的艺术。只有这些艺术才值得被推广。" 
  HNN_shi_he_zg_de_gong_tuan_zhu_yi:0 "湖南式工团主义"
@@ -1416,7 +1415,7 @@
  HNN_purge_militia_remains:0 "接受新理论"
  HNN_purge_militia_remains_desc:0 "既然军队的秩序已经被改造了，那我们就得充分利用后勤，传达与军令系统，这些琐事能帮我们赢得最终胜利。"
 
- HNN_officer_corps_experience:0 "分散化管理"
+ HNN_officer_corps_experience:0 "赤卫队经验"
  HNN_officer_corps_experience_desc:0 "我们的军队应该是去中心化，但他们现在仍依靠低效的指挥链来制定战术决策。我们必须向士官，甚至是最卑微的民兵们灌输让他们按照自己的意愿领导部队的精神。任何人都不应该等待别人给他下达命令。" 
  HNN_formazione_di_difesa:0 "发动群众"
  HNN_formazione_di_difesa_desc:0 "民兵的进攻能力有目共睹，但若想取得胜利，我们还需要动员人民组织一支防卫队伍。我们并不会为此打乱正规军的职责和战术，而是利用民兵填补防卫的空缺，让大部队能够腾出手来专心对付敌人。" 
@@ -1431,7 +1430,7 @@
  HNN_ge_ming_jun_dui:0 "革命军队"
  HNN_ge_ming_jun_dui_desc:0 "最终，我们的士兵知道了他们在为什么样的未来而战。过去，军阀的军队只为了他们的一己私利而发动战争，如今，我们为打碎这个国家的工人身上的枷锁而战。人民理解了利害关系，我们也是。国家的男男女女都会在某方面成为整场战争的一部分，齐心协力，我们将共同实现一同规划的未来。"
 
- HNN_central_command:0 "中央指挥"
+ HNN_central_command:0 "建立最高指挥部"
  HNN_central_command_desc:0 "我们应该建立一个中央指挥部，以加强我们各作战单位的交流与合作。这将使我们更加高效地部署并准备大规模作战。" 
  HNN_dissolve_militias:0 "重新建军"
  HNN_dissolve_militias_desc:0 "湖南省的旧军队是如此的腐朽不堪一击，无论敌伪政权之前采取了何种政策，现在只有纪律才是我们前进的唯一方向。我们要将从前松散的赤卫队打造成一支牢不可破、战无不胜的红军"
