全球大并购

--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -3197,6 +3197,15 @@
  GXC_LIB: "凡士通合众国"
  GXC_LIB_ADJ: "利比里亚子公司"
  GXC_LIB_DEF: "利比里亚子公司"
+ GXC_ARG: "宇宙探索有限公司"
+ GXC_ARG_ADJ: "阿根廷子公司"
+ GXC_ARG_DEF: "阿根廷子公司"
+ GXC_MEX: "大麻共和国"
+ GXC_MEX_ADJ: "墨西哥子公司"
+ GXC_MEX_DEF: "墨西哥子公司"
+ GXC_BRA: "木材王国"
+ GXC_BRA_ADJ: "巴西子公司"
+ GXC_BRA_DEF: "巴西子公司"
  autonomous_rich_puppet: "子公司"
 
  GXC_Reapproachment_with_Yunnan2:0 "处理邻里关系"
@@ -3259,6 +3268,12 @@
  GXC_paternal_autocrat_party_CAN_long:0 "鲟鱼王室(Sturgeon Royal Family)\n§g §!"
  BEL_national_populist_party_GXC:0 "梅赛德斯-奔驰研发中心"
  BEL_national_populist_party_GXC_long:0 "梅赛德斯-奔驰研发中心(Mercedes-Benz R&D Center)\n§g §!"
+ FOP_totalist_crusader_party:0 "星际探索与海豚交流协会"
+ FOP_totalist_crusader_party_long:0 "星际探索与海豚交流协会(Star Exploration and Dolphin Communication Association)\n§g §!"
+ BRA_paternal_autocrat_crusader_party:0 "亚马逊开发集团"
+ BRA_paternal_autocrat_crusader_party_long:0 "亚马逊开发集团(Amazon Development Group)\n§g §!"
+ MEX_national_populist_crusader_party:0 "大麻王室"
+ MEX_national_populist_crusader_party_long:0 "大麻王室(Cannabis Royal Family)\n§g §!"
 
  GXC_shang_tuan_favor_category:0 "商人们的恩怨纠葛"
  GXC_shang_tuan_favor_category_desc:0 "我们的政府实际上是由一大帮子商人们组建起来的。他们有着各自不同的利益需求，难以达成平衡。而陈廉伯虽然代表着本土商人的利益诉求，但他又时常被在东亚角力的两大列强德国和日本所影响。他们都想要将这片中国数一数二富饶的土地控制在自己的手中。以此作为入侵中国的跳板。两广就像一页扁舟在这三方势力的冲刷下左右摇晃。\n\n[GXC_shangtuan_party_influence][GXC_german_influence][GXC_japan_clique_influence]"
@@ -3307,13 +3322,16 @@
  GXC_chong_jian_xby:0 "组建西班牙子公司"
  GXC_chong_jian_ydl:0 "组建意大利子公司"
  GXC_chong_jian_eng:0 "组建不列颠子公司"
+ GXC_chong_jian_eng_desc:0 "他们不会给我的车涂上黑漆吧？"
  GXC_chong_nei_nuo:0 "组建法兰西子公司"
  GXC_chong_jian_GER:0 "组建德意志子公司"
  GXC_chong_jian_AUS:0 "组建奥地利子公司"
  GXC_chong_jian_AUS_desc:0 "一位值得信赖的经济学家将被我们委托组建奥地利子公司，希望他们的业绩蒸蒸日上。"
  GXC_chong_jian_RUS:0 "组建俄罗斯子公司"
+ GXC_chong_jian_RUS_desc:0 "我们在俄罗斯的石油公司本来应该是一位伟大的出身格鲁吉亚的钢铁之人，但是在万恶的宇宙能量干涉下我们只能选择一位毫不出奇的“皇室成员”。"
  GXC_chong_jian_UKR:0 "组建乌克兰子公司"
  GXC_chong_jian_SWI:0 "组建瑞士子公司"
+ GXC_chong_jian_SWI_desc:0 "太伟大了，哈耶克，你无形的大手带给集团无限的极乐。但是，立马给我去赚钱，赚不到我就派两个极权分子去瑞士搞共产主义公社保护区，然后疯矿赚门票钱。"
  GXC_chong_jian_BLE:0 "组建比利时子公司"
  GXC_chong_jian_POL:0 "组建波兰子公司"
  GXC_chong_jian_MFA:0 "组建法属非洲子公司"
@@ -3321,13 +3339,18 @@
  GXC_chong_jian_LIB:0 "组建利比里亚子公司"
  GXC_chong_jian_GEA:0 "组建中南子公司"
  GXC_chong_jian_CAN:0 "组建加拿大子公司"
+ GXC_chong_jian_CAN_desc:0 "不爱江山爱美人？开玩笑，你老婆已经被我收购了，要想赎买回去就多多努力吧。"
  GXC_chong_jian_HON:0 "组建中美洲子公司"
+ GXC_chong_jian_ARG:0 "组建阿根廷子公司"
+ GXC_chong_jian_BRA:0 "组建巴西子公司"
  GXC_chong_jian_USA:0 "组建美利坚子公司"
  GXC_chong_jian_NEE:0 "组建新英格兰子公司"
  GXC_chong_jian_COL:0 "组建加利福尼亚子公司"
  GXC_chong_jian_COR:0 "组建肯塔基子公司"
  GXC_chong_jian_TEX:0 "组建德克萨斯子公司"
  GXC_chong_jian_CSA:0 "组建芝加哥子公司"
+ GXC_chong_jian_CSA_desc:0 "我们的老大个“疤脸”阿尔·卡彭放下了手中的武器，戴上手套做起了炸鸡，这下集团的伙食有保障咯。"
+ GXC_chong_jian_MEX:0 "组建墨西哥子公司"
  GXC_chong_jian_ri_ben_flag:0 "挑选日本子公司旗帜"
 
  GXC_shangye_fan_rong:0 "商业繁荣"
@@ -3604,6 +3627,9 @@
  lngst.48.t:0 "拜谒中山陵"
  lngst.48.d:0 "当太阳刚刚拂晓的时候，陈廉伯在没有通知任何人的情况下离开了市区。他独自一人站在孙中山的衣冠冢上飘扬的青天白日旗下回忆过往。十年前，他是全中国的笑柄，被孙中山打败，灰溜溜的逃往香港，那个时候的他是如此的绝望。而在那段时期，坟里那家伙是多么的意气风发，那该死的家伙和他那该死的党派一遍又一遍的畅想着要统一中国。但是现在呢？他躺在了坟里，尸身留着北京。他的党也被自己打得二次解散了，“三民主义，哼，”他吐出一口浓痰啐在墓碑上。“现在轮到你了，在坟里后悔一辈子吧。”他不带一点留念的跨步离开了陵园，他要将这里打造成一座承载着他功绩的丰碑。要在附近最高的山上树立起自己的雕像，要让每一个来祭奠坟里那家伙的人抬起头就能看到有一个比坟里那家伙伟大一万倍的人还活着。"
  lngst.48.a:0 "“三你楼某冚家铲主义！”"
+ lngst.49.t:0 "老大个万岁"
+ lngst.49.d:0 "从肯德基宪政国访问归来的卡彭老大全然不顾已经吃的很饱了，连夜来到一家麦当劳点了一份麦麦脆汁鸡套餐孜孜不倦地同数百万人民群众一起欢乐地享受起来。吃到很晚了，发现仍然有很多人民群众在享受美味的麦当劳，便亲自送顾客出门，要自己的司机一个接一个地送他们回家，在去门口的路上，我们说“卡彭老大，您回去继续吃吧，您刚从肯德基宪政国回来。”卡彭老大摇摇头“不碍事，你们知道，现在南方有很多人把我们麦当劳当做敌人，不断造谣我们的食物致癌，说我们的白羽鸡公社的鸡有八个翅膀，你们是麦当劳的顾客，你们的事情便是麦当劳的事情，是头等大事。”我们都激动了，嘴里流着口水。多好的卡彭老大呀！"
+ lngst.49.a:0 "感动的泪水从嘴角滑落"
 
  #军改
  GXC_shang_tuan_jun_shi_gai_ge:0 "暴力亦是商品"
@@ -3689,6 +3715,14 @@
  GXC_zha_ji_gong_she_desc:0 " "
  GXC_ji_de_ke_le:0 "记得点可乐"
  GXC_ji_de_ke_le_desc:0 " "
+
+ GXC_KFC_Y:0 "肯德基宪政国国策树"
+ GXC_bai_ren_de_xiang_shou:0 "白人的享受"
+ GXC_bai_ren_de_xiang_shou_desc:0 " "
+ GXC_feng_kuang_mei_yi_tian:0 "疯狂每一天"
+ GXC_feng_kuang_mei_yi_tian_desc:0 " "
+ GXC_jin_tian_mei_de_chi:0 "但不是今天"
+ GXC_jin_tian_mei_de_chi_desc:0 " "
 
 #百色起义
  GXC_BAI: "广西起义军"
